add nvim devicons

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,7 @@ bold_font MonoLisa Bold
 italic_font MonoLisa Regular Italic
 bold_italic_font MonoLisa Bold Italic
 
+
 font_size 13
 adjust_line_height 175%
 
@@ -17,3 +18,6 @@ window_padding_width 10
 # Tokyo Night Moon
 include current-theme.conf
 # END_KITTY_THEME
+
+# Nerd icons symbol map
+include icons.conf
