--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,7 +15,7 @@ window_padding_width 10
 
 
 # BEGIN_KITTY_THEME
-# Tokyo Night Moon
+# Catppuccin-Macchiato
 include current-theme.conf
 # END_KITTY_THEME
 
