--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -13,6 +13,12 @@ hide_window_decorations titlebar-only
 
 window_padding_width 10
 
+# Tabs
+# tab_bar_min_tabs            0
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
