--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -10,6 +10,7 @@
 
 # The basic colors
 foreground              #CAD3F5
+# background              #0e172b
 background              #24273A
 selection_foreground    #24273A
 selection_background    #F4DBD6
