default to darkmode on fresh install

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -62,7 +62,7 @@
     | Theme
     |--------------------------------------------------------------------------
     */
-    "workbench.colorTheme": "Catppuccin Latte",
+    "workbench.colorTheme": "Catppuccin Macchiato",
     "workbench.iconTheme": "quill-icons",
     /*
     |--------------------------------------------------------------------------
